--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,11 @@ sysinfo.txt
 *.apk
 *.unitypackage
 Assets/StreamingAssets/build_info.txt
+Assets/DownloadFile/Ads/908.jpg
+Assets/DownloadFile/Ads/908.jpg.meta
+Assets/DownloadFile/Ads/949.jpg
+Assets/DownloadFile/Ads/949.jpg.meta
+Assets/DownloadFile/Ads/963.jpg
+Assets/DownloadFile/Ads/963.jpg.meta
+ProjectSettings/EditorBuildSettings.asset
+ProjectSettings/EditorBuildSettings.asset
